include/node/node.h


typedef struct oaknode_value {
	int type; 
	int64_t num; 
	int64_t den; 
	double f[4]; 
} oaknode_value;
typedef struct OakNodeNode OakNodeNode;
typedef struct OakNodeProject OakNodeProject;
typedef struct OakNodeFootage OakNodeFootage;
typedef struct OakNodeMarkerList OakNodeMarkerList;
typedef struct OakNodeWorkArea OakNodeWorkArea;
typedef struct OakNodeFrameCache OakNodeFrameCache;
typedef struct OakAudioParams OakAudioParams;
int oaknode_debug_alive_count(void);
int oaknode_node_get_id(const OakNodeNode *node, char *buf, int buf_size);
int oaknode_node_get_name(const OakNodeNode *node, char *buf, int buf_size);
int oaknode_node_get_label(const OakNodeNode *node, char *buf, int buf_size);
int oaknode_node_set_label(OakNodeNode *node, const char *label);
int oaknode_node_set_label_undoable(OakNodeNode *node, const char *label,
									OakUndoCommand *out_command);
int oaknode_node_get_override_color(const OakNodeNode *node, int *out_value);
int oaknode_node_set_override_color(OakNodeNode *node, int index);
int oaknode_node_set_override_color_undoable(OakNodeNode *node, int index,
											 OakUndoCommand *out_command);
int oaknode_node_is_enabled(const OakNodeNode *node, int *out_value);
int oaknode_node_set_enabled(OakNodeNode *node, int enabled);
int oaknode_node_set_enabled_undoable(OakNodeNode *node, int enabled,
									  OakUndoCommand *out_command);
int oaknode_node_input_count(const OakNodeNode *node, int *out_count);
int oaknode_node_input_id(const OakNodeNode *node, int index, char *buf,
						  int buf_size);
int oaknode_node_input_get_type(const OakNodeNode *node, const char *input_id,
								int *out_type);
int oaknode_node_input_is_connected(const OakNodeNode *node,
									const char *input_id, int *out_value);
int oaknode_node_input_is_connectable(const OakNodeNode *node,
									  const char *input_id, int *out_value);
int oaknode_node_get_input_name(const OakNodeNode *node, const char *input_id,
								char *buf, int buf_size);
int oaknode_node_input_get_connected_node(const OakNodeNode *node,
										  const char *input_id,
										  OakNodeNode **out_node);
int oaknode_node_get_input(const OakNodeNode *node, const char *input_id,
						   oaknode_value *out);
int oaknode_node_set_input(OakNodeNode *node, const char *input_id,
						   const oaknode_value *v);
int oaknode_node_set_input_undoable(OakNodeNode *node, const char *input_id,
									const oaknode_value *v,
									OakUndoCommand *out_command);
int oaknode_node_get_input_string(const OakNodeNode *node,
								  const char *input_id, char *buf,
								  int buf_size);
int oaknode_node_set_input_string(OakNodeNode *node, const char *input_id,
								  const char *value);
int oaknode_node_set_input_string_undoable(OakNodeNode *node,
										   const char *input_id,
										   const char *value,
										   OakUndoCommand *out_command);
int oaknode_node_connect(OakNodeNode *output_node, OakNodeNode *input_node,
						 const char *input_id);
int oaknode_node_connect_undoable(OakNodeNode *output_node,
								  OakNodeNode *input_node,
								  const char *input_id,
								  OakUndoCommand *out_command);
int oaknode_node_disconnect(OakNodeNode *input_node, const char *input_id);
int oaknode_node_disconnect_undoable(OakNodeNode *input_node,
									 const char *input_id,
									 OakUndoCommand *out_command);
int oaknode_node_output_connection_count(const OakNodeNode *node,
										 int *out_count);
int oaknode_node_output_connection_node_at(const OakNodeNode *node, int index,
										   OakNodeNode **out_node);
int oaknode_node_output_connection_input_id_at(const OakNodeNode *node,
											   int index, char *buf,
											   int buf_size);
int oaknode_node_output_connection_element_at(const OakNodeNode *node,
											  int index, int *out_element);
int oaknode_node_link(OakNodeNode *a, OakNodeNode *b, int *out_linked);
int oaknode_node_unlink(OakNodeNode *a, OakNodeNode *b, int *out_unlinked);
int oaknode_node_link_undoable(OakNodeNode *a, OakNodeNode *b, int link,
							   OakUndoCommand *out_command);
int oaknode_node_are_linked(const OakNodeNode *a, const OakNodeNode *b,
							int *out_value);
int oaknode_node_link_count(const OakNodeNode *node, int *out_count);
int oaknode_node_link_at(const OakNodeNode *node, int index,
						 OakNodeNode **out_node);
int oaknode_node_context_count(const OakNodeNode *node, int *out_count);
int oaknode_node_context_node_at(const OakNodeNode *node, int index,
								 OakNodeNode **out_node);
int oaknode_node_get_context_position(const OakNodeNode *node,
									  OakNodeNode *context, double *out_x,
									  double *out_y, int *out_expanded);
int oaknode_node_set_context_position(OakNodeNode *node, OakNodeNode *context,
									  double x, double y, int expanded);
int oaknode_node_set_context_position_undoable(OakNodeNode *node,
											   OakNodeNode *context, double x,
											   double y, int expanded,
											   OakUndoCommand *out_command);
int oaknode_node_remove_from_context(OakNodeNode *node, OakNodeNode *context);
OakNodeNode *oaknode_node_create_copy(const OakNodeNode *node);
OakNodeNode *oaknode_node_copy_in_graph(OakNodeNode *node,
										OakUndoCommand *out_command);
int oaknode_node_get_project(const OakNodeNode *node,
							 OakNodeProject **out);
int oaknode_node_input_array_insert(OakNodeNode *node,
									const char *input_id, int index);
int oaknode_node_input_array_remove(OakNodeNode *node,
									const char *input_id, int index);
int oaknode_node_connect_element(OakNodeNode *output_node,
								 OakNodeNode *input_node,
								 const char *input_id, int element);
int oaknode_node_disconnect_element(OakNodeNode *input_node,
									const char *input_id, int element);
OakUndoCommand oaknode_command_create_add_node(OakNodeProject *graph,
												OakNodeNode *node);
OakUndoCommand oaknode_command_create_set_position_recursive(
	OakNodeNode *node, OakNodeNode *context, double x, double y);
int oaknode_node_get_markers(const OakNodeNode *node,
							 OakNodeMarkerList **out);
int oaknode_node_get_work_area(const OakNodeNode *node,
							   OakNodeWorkArea **out);
int oaknode_node_get_video_frame_cache(const OakNodeNode *node,
									   OakNodeFrameCache **out);
int oaknode_node_copy_inputs(OakNodeNode *dst, const OakNodeNode *src,
							 int include_connections);
int oaknode_node_set_value_hint_track(OakNodeNode *node,
									  const char *input_id,
									  int track_type, int track_index);
int oaknode_viewer_set_video_params(OakNodeNode *viewer,
									const OakVideoParams *params);
int oaknode_viewer_set_audio_params(OakNodeNode *viewer,
									const OakAudioParams *params);
int oaknode_node_find_input_footage(const OakNodeNode *node,
									OakNodeFootage **out);
OakUndoCommand oaknode_command_create_remove_node(OakNodeNode *node);
void oaknode_node_free(OakNodeNode *node);