src/facade/rust/src/bridge/node.rs


	// ---- include/node/node.h ------------------------------------------------
	/// `oaknode_debug_alive_count`.
	pub fn oaknode_debug_alive_count() -> c_int;
	/// `oaknode_node_get_id` (two-stage string).
	pub fn oaknode_node_get_id(node: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_node_get_name` (two-stage string).
	pub fn oaknode_node_get_name(node: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_node_get_label` (two-stage string).
	pub fn oaknode_node_get_label(node: CHandle, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_node_set_label` — live.
	pub fn oaknode_node_set_label(node: CHandle, label: *const c_char) -> c_int;
	/// `oaknode_node_set_label_undoable`.
	pub fn oaknode_node_set_label_undoable(node: CHandle, label: *const c_char, out_command: *mut CHandle) -> c_int;
	/// `oaknode_node_get_override_color`.
	pub fn oaknode_node_get_override_color(node: CHandle, out_value: *mut c_int) -> c_int;
	/// `oaknode_node_set_override_color` — live.
	pub fn oaknode_node_set_override_color(node: CHandle, index: c_int) -> c_int;
	/// `oaknode_node_set_override_color_undoable`.
	pub fn oaknode_node_set_override_color_undoable(node: CHandle, index: c_int, out_command: *mut CHandle) -> c_int;
	/// `oaknode_node_is_enabled`.
	pub fn oaknode_node_is_enabled(node: CHandle, out_value: *mut c_int) -> c_int;
	/// `oaknode_node_set_enabled` — live.
	pub fn oaknode_node_set_enabled(node: CHandle, enabled: c_int) -> c_int;
	/// `oaknode_node_set_enabled_undoable`.
	pub fn oaknode_node_set_enabled_undoable(node: CHandle, enabled: c_int, out_command: *mut CHandle) -> c_int;
	/// `oaknode_node_input_count`.
	pub fn oaknode_node_input_count(node: CHandle, out_count: *mut c_int) -> c_int;
	/// `oaknode_node_input_id` (two-stage string).
	pub fn oaknode_node_input_id(node: CHandle, index: c_int, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_node_input_get_type`.
	pub fn oaknode_node_input_get_type(node: CHandle, input_id: *const c_char, out_type: *mut c_int) -> c_int;
	/// `oaknode_node_input_is_connected`.
	pub fn oaknode_node_input_is_connected(node: CHandle, input_id: *const c_char, out_value: *mut c_int) -> c_int;
	/// `oaknode_node_input_is_connectable`.
	pub fn oaknode_node_input_is_connectable(node: CHandle, input_id: *const c_char, out_value: *mut c_int) -> c_int;
	/// `oaknode_node_get_input_name` (two-stage string).
	pub fn oaknode_node_get_input_name(node: CHandle, input_id: *const c_char, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_node_input_get_connected_node` — borrowed handle out.
	pub fn oaknode_node_input_get_connected_node(node: CHandle, input_id: *const c_char, out_node: *mut CHandle) -> c_int;
	/// `oaknode_node_get_input` — POD value out.
	pub fn oaknode_node_get_input(
		node: CHandle,
		input_id: *const c_char,
		out: *mut crate::node::OakNodeValue,
	) -> c_int;
	/// `oaknode_node_set_input` — live.
	pub fn oaknode_node_set_input(node: CHandle, input_id: *const c_char, v: *const crate::node::OakNodeValue) -> c_int;
	/// `oaknode_node_set_input_undoable`.
	pub fn oaknode_node_set_input_undoable(
		node: CHandle,
		input_id: *const c_char,
		v: *const crate::node::OakNodeValue,
		out_command: *mut CHandle,
	) -> c_int;
	/// `oaknode_node_get_input_string` (two-stage string).
	pub fn oaknode_node_get_input_string(node: CHandle, input_id: *const c_char, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_node_set_input_string` — live.
	pub fn oaknode_node_set_input_string(node: CHandle, input_id: *const c_char, value: *const c_char) -> c_int;
	/// `oaknode_node_set_input_string_undoable`.
	pub fn oaknode_node_set_input_string_undoable(
		node: CHandle,
		input_id: *const c_char,
		value: *const c_char,
		out_command: *mut CHandle,
	) -> c_int;
	/// `oaknode_node_connect` — live, element -1.
	pub fn oaknode_node_connect(output_node: CHandle, input_node: CHandle, input_id: *const c_char) -> c_int;
	/// `oaknode_node_connect_undoable`.
	pub fn oaknode_node_connect_undoable(
		output_node: CHandle,
		input_node: CHandle,
		input_id: *const c_char,
		out_command: *mut CHandle,
	) -> c_int;
	/// `oaknode_node_disconnect` — live, element -1.
	pub fn oaknode_node_disconnect(input_node: CHandle, input_id: *const c_char) -> c_int;
	/// `oaknode_node_disconnect_undoable`.
	pub fn oaknode_node_disconnect_undoable(input_node: CHandle, input_id: *const c_char, out_command: *mut CHandle) -> c_int;
	/// `oaknode_node_output_connection_count`.
	pub fn oaknode_node_output_connection_count(node: CHandle, out_count: *mut c_int) -> c_int;
	/// `oaknode_node_output_connection_node_at` — borrowed handle out.
	pub fn oaknode_node_output_connection_node_at(node: CHandle, index: c_int, out_node: *mut CHandle) -> c_int;
	/// `oaknode_node_output_connection_input_id_at` (two-stage string).
	pub fn oaknode_node_output_connection_input_id_at(
		node: CHandle,
		index: c_int,
		buf: *mut c_char,
		buf_size: c_int,
	) -> c_int;
	/// `oaknode_node_output_connection_element_at`.
	pub fn oaknode_node_output_connection_element_at(node: CHandle, index: c_int, out_element: *mut c_int) -> c_int;
	/// `oaknode_node_link` — live; `out_linked` may be NULL.
	pub fn oaknode_node_link(a: CHandle, b: CHandle, out_linked: *mut c_int) -> c_int;
	/// `oaknode_node_unlink` — live; `out_unlinked` may be NULL.
	pub fn oaknode_node_unlink(a: CHandle, b: CHandle, out_unlinked: *mut c_int) -> c_int;
	/// `oaknode_node_link_undoable` — `link` != 0 links, 0 unlinks.
	pub fn oaknode_node_link_undoable(a: CHandle, b: CHandle, link: c_int, out_command: *mut CHandle) -> c_int;
	/// `oaknode_node_are_linked`.
	pub fn oaknode_node_are_linked(a: CHandle, b: CHandle, out_value: *mut c_int) -> c_int;
	/// `oaknode_node_link_count`.
	pub fn oaknode_node_link_count(node: CHandle, out_count: *mut c_int) -> c_int;
	/// `oaknode_node_link_at` — borrowed handle out.
	pub fn oaknode_node_link_at(node: CHandle, index: c_int, out_node: *mut CHandle) -> c_int;
	/// `oaknode_node_context_count`.
	pub fn oaknode_node_context_count(node: CHandle, out_count: *mut c_int) -> c_int;
	/// `oaknode_node_context_node_at` — borrowed handle out.
	pub fn oaknode_node_context_node_at(node: CHandle, index: c_int, out_node: *mut CHandle) -> c_int;
	/// `oaknode_node_get_context_position` — any out pointer may be NULL.
	pub fn oaknode_node_get_context_position(
		node: CHandle,
		context: CHandle,
		out_x: *mut f64,
		out_y: *mut f64,
		out_expanded: *mut c_int,
	) -> c_int;
	/// `oaknode_node_set_context_position` — live.
	pub fn oaknode_node_set_context_position(node: CHandle, context: CHandle, x: f64, y: f64, expanded: c_int) -> c_int;
	/// `oaknode_node_set_context_position_undoable`.
	pub fn oaknode_node_set_context_position_undoable(
		node: CHandle,
		context: CHandle,
		x: f64,
		y: f64,
		expanded: c_int,
		out_command: *mut CHandle,
	) -> c_int;
	/// `oaknode_node_remove_from_context` — live.
	pub fn oaknode_node_remove_from_context(node: CHandle, context: CHandle) -> c_int;
	/// `oaknode_node_create_copy` — standalone copy, refcount 1.
	pub fn oaknode_node_create_copy(node: CHandle) -> CHandle;
	/// `oaknode_node_copy_in_graph` — copy + MultiUndoCommand out.
	pub fn oaknode_node_copy_in_graph(node: CHandle, out_command: *mut CHandle) -> CHandle;
	/// `oaknode_node_get_project` — borrowed project handle out.
	pub fn oaknode_node_get_project(node: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_node_input_array_insert` — live.
	pub fn oaknode_node_input_array_insert(node: CHandle, input_id: *const c_char, index: c_int) -> c_int;
	/// `oaknode_node_input_array_remove` — live.
	pub fn oaknode_node_input_array_remove(node: CHandle, input_id: *const c_char, index: c_int) -> c_int;
	/// `oaknode_node_connect_element` — element-aware connect.
	pub fn oaknode_node_connect_element(output_node: CHandle, input_node: CHandle, input_id: *const c_char, element: c_int) -> c_int;
	/// `oaknode_node_disconnect_element` — element-aware disconnect.
	pub fn oaknode_node_disconnect_element(input_node: CHandle, input_id: *const c_char, element: c_int) -> c_int;
	/// `oaknode_command_create_add_node` — owned `NodeAddCommand`.
	pub fn oaknode_command_create_add_node(graph: CHandle, node: CHandle) -> CHandle;
	/// `oaknode_command_create_set_position_recursive` — owned command.
	pub fn oaknode_command_create_set_position_recursive(node: CHandle, context: CHandle, x: f64, y: f64) -> CHandle;
	/// `oaknode_node_get_markers` — addref'd oaktimeline list handle out.
	pub fn oaknode_node_get_markers(node: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_node_get_work_area` — addref'd oaktimeline workarea handle out.
	pub fn oaknode_node_get_work_area(node: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_node_get_video_frame_cache` — addref'd oakrender cache handle out.
	pub fn oaknode_node_get_video_frame_cache(node: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_node_copy_inputs` — `include_connections` != 0 also copies edges.
	pub fn oaknode_node_copy_inputs(dst: CHandle, src: CHandle, include_connections: c_int) -> c_int;
	/// `oaknode_node_set_value_hint_track` — single texture type hint.
	pub fn oaknode_node_set_value_hint_track(node: CHandle, input_id: *const c_char, track_type: c_int, track_index: c_int) -> c_int;
	/// `oaknode_viewer_set_video_params` — `params` is an oakcommon handle.
	pub fn oaknode_viewer_set_video_params(viewer: CHandle, params: *const CHandle) -> c_int;
	/// `oaknode_viewer_set_audio_params` — `params` is a borrowed oakcore handle.
	pub fn oaknode_viewer_set_audio_params(viewer: CHandle, params: *const c_void) -> c_int;
	/// `oaknode_node_find_input_footage` — borrowed footage handle out.
	pub fn oaknode_node_find_input_footage(node: CHandle, out: *mut CHandle) -> c_int;
	/// `oaknode_node_get_input_at_time` — rational seconds.
	pub fn oaknode_node_get_input_at_time(
		node: CHandle,
		input_id: *const c_char,
		time_num: i64,
		time_den: i64,
		out: *mut crate::node::OakNodeValue,
	) -> c_int;
	/// `oaknode_node_set_input_at_time_undoable` — rational seconds.
	pub fn oaknode_node_set_input_at_time_undoable(
		node: CHandle,
		input_id: *const c_char,
		time_num: i64,
		time_den: i64,
		v: *const crate::node::OakNodeValue,
		track: c_int,
		out_command: *mut CHandle,
	) -> c_int;
	/// `oaknode_node_identity` — opaque identity int.
	pub fn oaknode_node_identity(node: CHandle) -> usize;
	/// `oaknode_node_set_input_at_time_into` — batch into a multi command.
	pub fn oaknode_node_set_input_at_time_into(
		node: CHandle,
		input_id: *const c_char,
		time_num: i64,
		time_den: i64,
		v: *const crate::node::OakNodeValue,
		track: c_int,
		multi_command: CHandle,
	) -> c_int;
	/// `oaknode_command_create_remove_node` — owned remove+disconnect command.
	pub fn oaknode_command_create_remove_node(node: CHandle) -> CHandle;
	/// `oaknode_node_free` — NULL/empty no-op; clears `node->ctx`.
	pub fn oaknode_node_free(node: *mut CHandle);

	// ---- include/node/factory.h ---------------------------------------------
	/// `oaknode_factory_initialize`.
	pub fn oaknode_factory_initialize() -> c_int;
	/// `oaknode_factory_destroy`.
	pub fn oaknode_factory_destroy();
	/// `oaknode_factory_id_count`.
	pub fn oaknode_factory_id_count(out_count: *mut c_int) -> c_int;
	/// `oaknode_factory_id_at` (two-stage string).
	pub fn oaknode_factory_id_at(index: c_int, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_factory_name_from_id` (two-stage string).
	pub fn oaknode_factory_name_from_id(type_id: *const c_char, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_factory_create_from_id` — new node, refcount 1.
	pub fn oaknode_factory_create_from_id(type_id: *const c_char) -> CHandle;
	/// `oaknode_factory_node_at` — borrowed prototype handle out.
	pub fn oaknode_factory_node_at(index: c_int, out_node: *mut CHandle) -> c_int;
